--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -1,8 +1,39 @@
 {
+	"errors": {
+		"pageNotFound": "Страница не найдена"
+	},
+	"general": {
+		"backToHome": "Вернуться на главную страницу"
+	},
 	"home": {
+		"aboutDescription": "<p>Дорогие друзья-музыканты</p>\n<p>Ужасные события в Украине заставляют нас грустить, злиться и в то же время\nвремя бессильно. Это страдание не передать словами. С языком наиболее\nзнакомый нам язык музыки подарим поддержку и утешение\nстоль мужественному народу Украины и всем, кто разделяет страдания\nв этой прекрасной стране.\n</p>\n<p>Музыка утешает, соединяет, обнимает там, где не могут этого сделать ни слова, ни руки.\n</p>\n<p></p>На этом сайте мы хотим пригласить музыкантов, инструментальных и\nвокальные ансамбли, оркестры, хоры и группы со всего мира,\nподелиться своей версией украинского гимна.\n</p>\n<p>Для упорядоченного процесса:\n</p>\n<ul>    <li>В вашем видео воспроизводиться только национальный гимн</li>    <li>    Вы можете начать или закончить это коротким словом утешения.\n    </li>    <li>    В своем комментарии используйте короткое ободряющее предложение. Нет негатива,\n    никакой ненависти, никаких длинных текстов.\n    </li>    <li>    Тег с украинским флагом рядом с флагом своей страны\n    </li>    <li>Используйте хэштег <b>#musiciansforukraine</b> , чтобы поделиться</li>\n</ul>\n<p>Отправьте ссылку на свое видео на <a href=\"mailto:\nmusic@musiciansforukraine.com\">music@musiciansforukraine.com</a>\n</p>\n<p>Или поделитесь им в нашей <a href=\"https://www.facebook.com/groups/musiciansforukraine\" target=\"_blank\">группе Facebook</a>!\n</p>\n<p>Поделитесь с как можно большим количеством людей. Они почувствуют эмоциональную поддержку\nприезжают со всего мира.\n</p>\n<p>Искренняя благодарность за ваш вклад!\n</p>",
+		"linkTitle": "Домашняя страница",
 		"meta": {
 			"description": "Поддержка Украины через музыку",
 			"title": "Музыканты для Украины"
+		}
+	},
+	"languages": {
+		"de": "Немецкий",
+		"en": "Aнглийский",
+		"fr": "Французский",
+		"nl": "Голландский",
+		"ru": "Pусский",
+		"uk": "Украинец"
+	},
+	"scores": {
+		"latinAlphabet": "Латинский алфавит",
+		"lyrics": "Текст песни",
+		"lyricsTranslated": "Переведенный",
+		"meta": {
+			"description": "Скачать ноты украинской музыки",
+			"title": "Музыкальные партитуры"
+		},
+		"nationalAnthem": {
+			"fourInstrumentsInF": "4 инструмента в фа",
+			"lyricsTranslation": "<p>Украина еще не погибла, как и ее слава свободы<br>Нам, соотечественникам, судьба еще раз улыбнется<br>Наши враги исчезнут, как роса на утреннем солнце<br>И мы тоже будем править братьями на нашей свободной земле\n</p>\n<p>Мы положим наши тела и души, чтобы обрести свободу<br>И мы покажем, что мы, братья, народ казацкий (х2)\n</p>",
+			"title": "Гимн Украины",
+			"twoVoicesInG": "2 голоса в G"
 		}
 	}
 }
