--- a/i18n/locales/uk.json
+++ b/i18n/locales/uk.json
@@ -1,8 +1,39 @@
 {
+	"errors": {
+		"pageNotFound": "Сторінку не знайдено"
+	},
+	"general": {
+		"backToHome": "Повернутися на головну сторінку"
+	},
 	"home": {
+		"aboutDescription": "<p>Шановні друзі музиканти</p>\n<p>Жахливі події в Україні змушують нас відчувати сум, лютість і водночас\nчас безсилий. Це страждання не передається словами. З мовою найбільше\nзнайома нам, мова музики, дай нам підтримку і втіху\nсміливому народу України та всім, хто бере участь у стражданнях\nвикликані в цій прекрасній країні.\n</p>\n<p>Музика втішає, з’єднує, обіймає там, де немає слів чи рук.\n</p>\n<p></p>Цим сайтом ми хочемо запросити музикантів, інструментальних та\nвокальні ансамблі, оркестри, хори та колективи з усього світу до\nподіліться своєю версією гімну України.\n</p>\n<p>Для впорядкованого процесу:\n</p>\n<ul>    <li>У своєму відео грайте лише державний гімн</li>    <li>    Ви можете представити або закінчити це коротким втішним словом\n    </li>    <li>    У своєму коментарі використовуйте коротке заохочувальне речення. Без негативу,\n    без ненависті, без довгих текстів.\n    </li>    <li>    Позначте українським прапором біля прапора власної країни\n    </li>    <li>Використовуйте хештег <b>#musiciansforukraine</b> , щоб поділитися</li>\n</ul>\n<p>Надішліть посилання на своє відео на адресу <a href=\"mailto:\nmusic@musiciansforukraine.com\">music@musiciansforukraine.com</a>\n</p>\n<p>Або поділіться цим у нашій <a href=\"https://www.facebook.com/groups/musiciansforukraine\" target=\"_blank\">групі Facebook</a>!\n</p>\n<p>Поділіться з якомога більшою кількістю людей. Вони відчують емоційну підтримку\nприїжджають з усього світу.\n</p>\n<p>Щиро дякуємо за ваш внесок!\n</p>",
+		"linkTitle": "Домашня сторінка",
 		"meta": {
 			"description": "Підтримка України через музику",
 			"title": "Музиканти для України"
+		}
+	},
+	"languages": {
+		"de": "Німецька",
+		"en": "Англійська",
+		"fr": "Французька",
+		"nl": "Голландська",
+		"ru": "Російський",
+		"uk": "Українська"
+	},
+	"scores": {
+		"latinAlphabet": "Латинський алфавіт",
+		"lyrics": "Тексти пісень",
+		"lyricsTranslated": "Перекладено",
+		"meta": {
+			"description": "Завантажити партитури української музики",
+			"title": "Ноти"
+		},
+		"nationalAnthem": {
+			"fourInstrumentsInF": "4 інструменти у Ф",
+			"lyricsTranslation": "<p>Ще не загинула Україна і її слава свободи<br>Нам землякам доля ще раз посміхнеться<br>Наші вороги зникнуть, як роса на ранковому сонці<br>І ми також будемо правити братами на своїй вільній землі\n</p>\n<p>Ми покладемо свої тіла та душу, щоб досягти свободи<br>А ми покажемо, що ми, браття, козацький народ (х2)\n</p>",
+			"title": "Гімн України",
+			"twoVoicesInG": "2 голоси в Г"
 		}
 	}
 }
