Add Het Poorthuis partner

--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -11,6 +11,9 @@
 		"meta": {
 			"description": "Unterstützung der Ukraine durch Musik",
 			"title": "Musiker für die Ukraine"
+		},
+		"partners": {
+			"supportedBy": "Unterstützt durch"
 		}
 	},
 	"languages": {
