--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -11,6 +11,9 @@
 		"meta": {
 			"description": "Supporting Ukraine through music",
 			"title": "Musicians for Ukraine"
+		},
+		"partners": {
+			"supportedBy": "Supported by"
 		}
 	},
 	"languages": {
