--- a/i18n/locales/fr.json
+++ b/i18n/locales/fr.json
@@ -11,6 +11,9 @@
 		"meta": {
 			"description": "Soutenir l'Ukraine par la musique",
 			"title": "Musiciens pour l'Ukraine"
+		},
+		"partners": {
+			"supportedBy": "Supporté par"
 		}
 	},
 	"languages": {
