--- a/i18n/locales/nl.json
+++ b/i18n/locales/nl.json
@@ -11,6 +11,9 @@
 		"meta": {
 			"description": "Oekraïne steunen met muziek",
 			"title": "Muzikanten voor Oekraïne"
+		},
+		"partners": {
+			"supportedBy": "Gesteund door"
 		}
 	},
 	"languages": {
