--- a/i18n/locales/ru.json
+++ b/i18n/locales/ru.json
@@ -11,6 +11,9 @@
 		"meta": {
 			"description": "Поддержка Украины через музыку",
 			"title": "Музыканты для Украины"
+		},
+		"partners": {
+			"supportedBy": "При поддержке"
 		}
 	},
 	"languages": {
