--- a/i18n/locales/uk.json
+++ b/i18n/locales/uk.json
@@ -11,6 +11,9 @@
 		"meta": {
 			"description": "Підтримка України через музику",
 			"title": "Музиканти для України"
+		},
+		"partners": {
+			"supportedBy": "Підтримано"
 		}
 	},
 	"languages": {
