--- a/i18n/locales/de.json
+++ b/i18n/locales/de.json
@@ -38,5 +38,12 @@
 			"title": "Ukrainische Nationalhymne",
 			"twoVoicesInG": "2 Stimmen in G"
 		}
+	},
+	"support": {
+		"fullDescription": "<p>Wir werden unterstützt von:</p>      <ul>        <li>          <a href=\"https://hetpoorthuisbrugge.be/\" class=\"link\"\n            >Het Poorthuis</a\n          >: Psychologische Hilfe und Unterkunft für Flüchtlinge\n        </li>        <li>          <a href=\"https://www.facebook.com/ArtRaven-Lamoot-1101619029871258/\" class=\"link\"\n            >Raven Lamoot</a\n          >: Illustration auf der Musikpartiturseite\n        </li>        <li>          <a href=\"https://www.instagram.com/lohxillustrations/\" class=\"link\"\n            >Lotte Hendrickx</a\n          >: Logoillustration\n        </li>        <li>          <a href=\"https://helpukraine.be\" class=\"link\"\n            >Help Ukraine</a\n          >: Informationsseite über den Krieg in der Ukraine\n        </li>      </ul>      <h2>Möchten Sie uns auch helfen?</h2>      <p>Senden Sie uns eine Nachricht: <a href=\"mailto:music@musiciansforukraine.com\">music@musiciansforukraine.com</a></p>      <p>Wir sind alle Musiker für die Ukraine!</p>",
+		"meta": {
+			"description": "Wer hilft uns und wie können Sie auch",
+			"title": "Unterstütze uns"
+		}
 	}
 }
